--- a/k8s-service.yaml
+++ b/k8s-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kack.dev-service
+  name: kackdev-service
 spec:
   selector:
-   app: kack.dev
+   app: kackdev
   type: ClusterIP
   ports:
   - port: 80
