--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -11,6 +11,10 @@ spec:
       labels:
         app: kackdev
     spec:
+      volumes:
+        - name: cert-pv-storage
+          persistentVolumeClaim:
+            claimName: cert-pv-claim
       containers:
       - name: kackdev
         image: gabbersepp/kackdev
