add nginx config and fix ingress

--- a/k8s-ingress.yaml
+++ b/k8s-ingress.yaml
@@ -7,9 +7,10 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - http:
+  - host: kack.dev
+    http:
       paths:
-        - path: /kackdev
+        - path: /
           backend:
             serviceName: kackdev-service
             servicePort: 80
