--- a/k8s/k8s-ingress.yaml
+++ b/k8s/k8s-ingress.yaml
@@ -4,12 +4,16 @@ metadata:
   name: kackdev-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    #nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - host: kack.dev
     http:
       paths:
+        - path: /idptest
+          backend:
+            serviceName: kackdev-idp-service
+            servicePort: 80
         - path: /
           backend:
             serviceName: kackdev-service
