--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ services:
   docker
 
 before_install:
-  docker build -t gabbersepp/kackdev
+  docker build -t gabbersepp/kackdev .
   echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   docker push gabbersepp/kackdev:latest
