--- a/k8s/k8s-deployment.yaml
+++ b/k8s/k8s-deployment.yaml
@@ -13,6 +13,7 @@ spec:
     spec:
       containers:
       - name: kackdev
-        image: gabbersepp/kackdev
+        image: ghcr.io/gabbersepp/kackdev
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
