--- a/.drone.yml
+++ b/.drone.yml
@@ -54,3 +54,8 @@ steps:
   commands:
     - kubectl delete deployment kackdev -n default
     - kubectl apply -f k8s/deployment.yaml -n default
+  when:
+    branch:
+    - master
+    event:
+    - push
